fix text alignment issue

--- a/Home/homepage.css
+++ b/Home/homepage.css
@@ -158,6 +158,5 @@ body{
 @media only screen and (max-width: 590px) {
   #Section1 p{
     font-size: 20px;
-    line-height: 23px;
   }
 }
