--- a/sitewidestyles.css
+++ b/sitewidestyles.css
@@ -96,6 +96,6 @@ a {
 @media only screen and (max-width: 590px) {
   #Section1 p{
     font-size: 20px;
-    line-height: 23px;
+  
   }
 }
